--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <div class="contact">
         <div class="form">
             <h2>Contact Us</h2>
-            <input type="text" placeholder="Enter Your Email"><br>
-            <input type="text" placeholder="Enter your Phone Number"><br>
-            <textarea type="text" placeholder="Enter Your Desired Message"></textarea><br>
+            <input type="email" placeholder="Enter Your Email" required><br>
+            <input type="text" placeholder="Enter your Phone Number" required><br>
+            <textarea type="text" placeholder="Enter Your Desired Message" required></textarea><br>
             <a href="#">Submit</a>
         </div>
     </div>
